--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <!-- Header y Navegación -->
-    <header class="header">
+    <header style="" class="header">
         <d class="container">
             <div class="logo">
                 <img class="im_logo" src="./IMAGE/logo.png" alt="">
@@ -113,17 +113,15 @@
 
     <section class="hero" id="inicio">
         <div class="portada">
-            <img src="./IMAGE/" alt="">
-            <div class="container">
-                <div class="hero-content">
-                    <h1>Sabor y Bienestar en Minutos</h1>
+            <img src="./IMAGE/video-quinua-real.jpg" alt="">
+            <div class="container ">
+                <div class="hero-content hero-portada">
+                    <h1>Sabor y Bienestar en Minutos Por Parte de los  Andes gold</h1>
                     <p>Nutrición completa y lista</p>
                     <button class="btn-primary btn-large" id="hero-cta">Ver Catálogo</button>
                 </div>
             </div>
         </div>
-
-
     </section>
 
     <!-- Propuesta de Valor -->
@@ -222,6 +220,7 @@
                         <li><a href="#inicio">Inicio</a></li>
                         <li><a href="#catalogo">Catálogo</a></li>
                         <li><a href="#nosotros">Nosotros</a></li>
+                        <li><a href="admin/login.html">Administración</a></li>
                     </ul>
                 </div>
             </div>
@@ -230,16 +229,6 @@
             </div>
         </div>
     </footer>
-    <!-- En el footer de index.html -->
-    <div class="footer-section">
-        <h4>Empresa</h4>
-        <ul>
-            <li><a href="#nosotros">Nosotros</a></li>
-            <li><a href="#contacto">Contacto</a></li>
-            <li><a href="admin/login.html">Administración</a></li>
-        </ul>
-    </div>
-
     <!-- Scripts -->
     <script src="./JS/products.js"></script>
     <script src="./JS/cart.js"></script>
